--- a/.env.example
+++ b/.env.example
@@ -7,11 +7,12 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_HOST=localhost           # change to localhost
+DB_PORT=33060               # add a zero
+DB_DATABASE=vinylshop       # change to vinylshop
+DB_USERNAME=homestead       # change to homestead
+DB_PASSWORD=secret          # change to secret
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
